feat: adiciona camada de view ao projeto